--- a/index.html
+++ b/index.html
@@ -15,27 +15,93 @@
     <title>Connect4</title>
 </head>
 
-<body class="vh-100">
+<body class="vh-100 bg-secondary">
     <div id="app">
 
-        <div class="board">
-            <div class="d-flex" v-for="(row, index) in board" v-bind:key="row.id">
-                <div v-for="(item, index) in row" v-bind:key="item.id">
-                    <div class="box d-flex justify-content-center align-items-center">{{ item }}</div>
-                </div>
-            </div>
+        <!-- <img width="100px" height="100px" src="Images/ball-red.svg" alt=""> -->
+
+        <!-- <svg xmlns="Images/ball-red.svg"></svg> -->
+
+        <!-- <svg viewBox="0 0 100 100" role="img" aria-labelledby="foo bar" >
+            <title id="foo">正方形描画サンプル</title>
+            <desc id="bar">rect 要素を使った幅と高さ 80 でストロークが 5 の正方形のサンプル</desc>
+            <rect x="10" y="10" width="80" height="80" fill="gold"/>
+        </svg> -->
+        
+        <!-- <svg :x="col * cellSize" y="0">
+            <g @click="drop" class="column">
+                <board-checker
+                v-for="checker in checkers"
+                :key="key(checker)"
+                :checker="checker"
+                :cellSize="cellSize"
+                :rowCount="rowCount"
+                :checkerRadius="checkerRadius"
+                />
+                <rect
+                :width="cellSize"
+                :height="boardHeight"
+                :fill="color"
+                :mask="mask"
+                />
+            </g>
+        </svg>
+
+        <svg width="350px" viewBox="0 0 700 600" xmlns="http://www.w3.org/2000/svg%22%3E">
+            <defs>
+            <pattern id="cell-pattern" patternUnits="userSpaceOnUse" width="100" height="100">
+                <circle  cx="50" cy="50" r="45" fill="black"></circle>
+            </pattern>
+            <mask id="cell-mask">
+                <rect width="100" height="600" fill="white"></rect>
+                <rect width="100" height="600" fill="url(#cell-pattern)"></rect>
+            </mask>
+            </defs>
+            <svg x="0" y="0">
+            <circle cx="50" cy="550" r="45" fill="#254689"></circle>
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+            <svg x="100" y="0">
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+            <svg x="200" y="0">
+            <circle cx="50" cy="550" r="45" fill="#FC7E69"></circle>
+            <circle cx="50" cy="300" r="45" fill="#FC7E69"></circle>
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+            <svg x="300" y="0">
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+            <svg x="400" y="0">
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+            <svg x="500" y="0">
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+            <svg x="600" y="0">
+            <rect width="100" height="600" fill="cadetblue" mask="url(#cell-mask)"></rect>
+            </svg>
+        </svg> -->
+
+
+        <div class="d-flex justify-content-end mr-5">
+            <h1>{{whoseTurn}}</h1>
         </div>
 
-        <!-- <div class="board">
-            <div class="d-flex" v-for="(row, index) in board2" v-bind:key="row.id">
-                <div v-for="(item, index) in row" v-bind:key="item.id">
-                    <div class="box d-flex justify-content-center align-items-center"><i class="fas" :class="[fas-times]"></i></div>
-                </div>
+        <div class="d-flex flex-row justify-content-center mt-2 align-items-center">
+            <button class="d-flex align-items-center justify-content-center btn btn-primary mx-4 " v-on:click="colorChange(index); whoseTurnNow()" v-for="(button,index) in buttons"><i class="fas fa-chevron-down"></i></button>
+        </div>
+
+        <div class="d-flex justify-content-center align-items-center mt-3 ">
+            <div class="d-flex flex-wrap flex-column game-plate bg-primary" v-for="(row,index) in circles" :key="index" :id="index">
+                <div v-for="(circle,index) in row" :style="circleObject" :class="circle.color" :key="index" :id="index"></div>
             </div>
-        </div> -->
-        <!-- {fa-times: true,fa-rectangle-landscape:false} -->
+        </div>
+        
 
     </div>
+
+
     <script src="main.js" async></script>
 </body>
 
