--- a/index.html
+++ b/index.html
@@ -1,44 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <!-- fontawesome -->
-    <link href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-
-
-    <title>Connect4</title>
-</head>
-
-<body class="vh-100">
-    <div id="app">
-
-        <div class="board">
-            <div class="d-flex" v-for="(row, index) in board" v-bind:key="row.id">
-                <div v-for="(item, index) in row" v-bind:key="item.id">
-                    <div class="box d-flex justify-content-center align-items-center">{{ item }}</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- <div class="board">
-            <div class="d-flex" v-for="(row, index) in board2" v-bind:key="row.id">
-                <div v-for="(item, index) in row" v-bind:key="item.id">
-                    <div class="box d-flex justify-content-center align-items-center"><i class="fas" :class="[fas-times]"></i></div>
-                </div>
-            </div>
-        </div> -->
-        <!-- {fa-times: true,fa-rectangle-landscape:false} -->
-
-    </div>
-    <script src="main.js" async></script>
-</body>
-
-</html>
-
-
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="favicon.ico"><title>Connect4</title><link href="css/app.5e43235b.css" rel="preload" as="style"><link href="css/chunk-vendors.55204a1e.css" rel="preload" as="style"><link href="js/app.1e8214a1.js" rel="preload" as="script"><link href="js/chunk-vendors.39b76a05.js" rel="preload" as="script"><link href="css/chunk-vendors.55204a1e.css" rel="stylesheet"><link href="css/app.5e43235b.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but Connect4 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="js/chunk-vendors.39b76a05.js"></script><script src="js/app.1e8214a1.js"></script></body></html>
